--- a/src/sass/queries/queries.sass
+++ b/src/sass/queries/queries.sass
@@ -61,6 +61,19 @@
         
 
 @media screen and (max-width: 570px)
+    .navbar 
+        height: 130px
+
+    .nav-flex 
+        flex-direction: column
+
+        ul 
+            width: 100%
+            justify-content: space-between
+            li 
+                margin-left: 0 !important
+
+
     .blogs-section 
         grid-template-columns: 1fr
 
